// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum MediaType {
  FILM
  SERIES
  BOOK
  ARTICLE
  OTHER
}

enum Visibility {
  PUBLIC
  PRIVATE
}

enum CollectionRole {
  OWNER
  COLLABORATOR
  READER
}

model User {
  id        String   @id @default(uuid())
  username  String   @unique
  email     String   @unique
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  collections Collection[]
  collectionMembers CollectionUser[]

  @@map("users")
}

model Media {
  id            String   @id @default(uuid())
  title         String
  description   String?
  type          MediaType
  releaseDate   DateTime? @map("release_date")
  directorAuthor String? @map("director_author")
  tags          String[]
  platforms     String[]
  scores        Json?
  createdAt     DateTime @default(now()) @map("created_at")
  updatedAt     DateTime @updatedAt @map("updated_at")

  collections CollectionMedia[]

  @@map("media")
}

model Collection {
  id          String   @id @default(uuid())
  name        String
  description String?
  tags        String[]
  visibility  Visibility @default(PRIVATE)
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  ownerId String
  owner   User   @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  media   CollectionMedia[]
  members CollectionUser[]

  @@map("collections")
}

model CollectionMedia {
  id           String   @id @default(uuid())
  position     Int      @default(0)
  addedAt      DateTime @default(now()) @map("added_at")

  collectionId String
  collection   Collection @relation(fields: [collectionId], references: [id], onDelete: Cascade)

  mediaId String
  media   Media @relation(fields: [mediaId], references: [id], onDelete: Cascade)

  @@unique([collectionId, mediaId])
  @@map("collection_media")
}

model CollectionUser {
  id        String   @id @default(uuid())
  role      CollectionRole @default(READER)
  invitedAt DateTime @default(now()) @map("invited_at")
  accepted  Boolean  @default(false)

  collectionId String
  collection   Collection @relation(fields: [collectionId], references: [id], onDelete: Cascade)

  userId String
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([collectionId, userId])
  @@map("collection_users")
}
