@startuml DatabaseSchema
title Projet_AoS_APP5 — Database Schema

left to right direction

' Enumerations
enum MediaType {
  FILM
  SERIES
  BOOK
  ARTICLE
  OTHER
}

enum Visibility {
  PUBLIC
  PRIVATE
}

enum CollectionRole {
  OWNER
  COLLABORATOR
  READER
}

' Entities / Tables
entity "User" as User {
  * id : UUID <<PK>>
  --
  username : varchar
  email : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "Media" as Media {
  * id : UUID <<PK>>
  --
  title : varchar
  description : text
  type : MediaType
  release_date : date
  director_author : varchar
  tags : text[]
  platforms : text[]
  scores : json
  created_at : timestamp
  updated_at : timestamp
}

entity "Collection" as Collection {
  * id : UUID <<PK>>
  --
  name : varchar
  description : text
  tags : text[]
  created_at : timestamp
  updated_at : timestamp
  visibility : Visibility
}

entity "collection_media" as CollectionMedia {
  * id : UUID <<PK>>
  --
  collection_id : UUID <<FK Collection.id>>
  media_id : UUID <<FK Media.id>>
  position : int
  added_at : timestamp
}

entity "collection_user" as CollectionUser {
  * id : UUID <<PK>>
  --
  collection_id : UUID <<FK Collection.id>>
  user_id : UUID <<FK User.id>>
  role : CollectionRole
  invited_at : timestamp
  accepted : boolean
}

' Relationships
Collection ||--o{ CollectionMedia : "contains"
Media ||--o{ CollectionMedia : "included_in"
Collection ||--o{ CollectionUser : "members"
User ||--o{ CollectionUser : "member_of"

note right of CollectionMedia
  Many-to-many between Collections and Media.
  Additional fields: position, added_at
end note

note right of CollectionUser
  Join table for owners/collaborators/readers.
  Additional fields: invited_at, accepted
end note

@enduml
